De sidste tre sekvensdiagrammer

--- a/LaTeX/Projektdokumtation/Systemdesign/CentralServer/Intro.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/CentralServer/Intro.tex
@@ -1,4 +1,6 @@
-\begin{figure}[!hb]
+CentralServer implementerer server-delen af systemets klient-server arkitektur. 
+
+\begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{Systemdesign/CentralServer/Images/Packages.png}
     \caption{Pakkediagram for CentralServer}
