rettet nogle ting og gjort så det kan bygge igen

--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/DesignOgStruktur/DesignOgStruktur.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/DesignOgStruktur/DesignOgStruktur.tex
@@ -1,5 +1,5 @@
 \subsection{Design og struktur}
-\gls{KS} er designet med MVVM~\cite{MVVM}, og dertil også med stor fokus på adskillelse af Business Logic- og Præsentationslaget. Dette er sikret ved brug af viewmodels der står for at styre logikken i grænsefladen samt kommunikere ned i de nedre lag. Disse bliver forklaret nærmere længere nede, i kapital ??.
+\gls{KA} er designet med MVVM~\cite{MVVM}, og dertil også med stor fokus på adskillelse af Business Logic- og Præsentationslaget. Dette er sikret ved brug af viewmodels der står for at styre logikken i grænsefladen samt kommunikere ned i de nedre lag. Disse bliver forklaret nærmere længere nede, i kapital ??.
 Systemet er herunder beskrevet ved følgende pakkediagram for at give et hurtigt overblik.	
 
 \begin{figure}[H]
