--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/MainWindowXAML.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/MainWindowXAML.tex
@@ -1,3 +1,3 @@
 \textbf{MainWindow.xaml}
 
-Til kasseapparatet er der tilknyttet en stor Viewfil ved navn Mainwindow hvor hele opsætningen af grænsefladen visuelle dele er opskrevet. Hele grænsefladen er opbygget af grids. Ved at bruge grids er det nemt at opsætte grænsefladen, da man kan have grids i grids og derved præcist kan styre hvordan de forskellige elementer skal være placeret. Samtidig har grids indbygget skalering af de elementer den indkapsler. Dette gør at \gls{KS} selv skalerer korrekt alt efter skærmopløsningen.
+Til kasseapparatet er der tilknyttet en stor Viewfil ved navn Mainwindow hvor hele opsætningen af grænsefladen visuelle dele er opskrevet. Hele grænsefladen er opbygget af grids. Ved at bruge grids er det nemt at opsætte grænsefladen, da man kan have grids i grids og derved præcist kan styre hvordan de forskellige elementer skal være placeret. Samtidig har grids indbygget skalering af de elementer den indkapsler. Dette gør at \gls{KA} selv skalerer korrekt alt efter skærmopløsningen.
