--- a/LaTeX/Projektdokumtation/Accepttest/UCT5.tex
+++ b/LaTeX/Projektdokumtation/Accepttest/UCT5.tex
@@ -1,36 +1,36 @@
-\subsection{Accepttest for UC4: Rediger \gls{PD}}
+\subsection{Accepttest for UC4: Rediger produkt}
 
 
 
 \begin{table}[H]
 \begin{tabularx}{\textwidth}{|p{0.5cm}|X|X|X|p{1.5cm}|}
 \hline
-\multicolumn{5}{|l|}{\textbf{Use case under test:} 4 - Rediger \gls{PD}} \\\hline
+\multicolumn{5}{|l|}{\textbf{Use case under test:} 4 - Rediger produkt} \\\hline
 \multicolumn{5}{|l|}{\textbf{Scenarie:} Hovedscenarie} \\\hline
-\multicolumn{5}{|p{0.97\linewidth}|}{\textbf{Prækondition:} \gls{AS} har forbindelse til centralserver, og der er et test\gls{PD} med navn "Test\gls{PD} 1" og pris "100", Stregkode "ABC123", samt er i kategorien "Testkategori 1" og "Testkategori 2" i systemet.} \\\hline
+\multicolumn{5}{|p{0.97\linewidth}|}{\textbf{Prækondition:} \gls{AS} har forbindelse til centralserver, og der er et testprodukt med navn "Testprodukt 1" og pris "100", Stregkode "ABC123", samt er i kategorien "Testkategori 1" og "Testkategori 2" i systemet.} \\\hline
 Step & Handling & Forventet resultat & Observation & Vurdering (OK/fejl) \\\hline
-1 & \gls{SB} vælger "Test\gls{PD} 1" & Test\gls{PD} 1 markeres i \gls{PD}listen & Testprodukt 1 markes & OK \\\hline
-2 & \gls{SB} trykker på knappen til rediger \gls{PD} & Et nyt vindue præsenteres for \gls{SB}, som viser hhv. pris, navn, stregekode og nuværende \gls{PDK} for det markerede "Testpodukt 1" & Vindue fremkommer & OK \\\hline
-3 & \gls{SB} ændrer navnet til Test\gls{PD} 1a, prisen til 150, stregkode ABC1234, samt test\gls{PDK} til test\gls{PDK} 2, hvorefter han trykker på knappen til gem. & \gls{SB}"Rediger \gls{PD}"-vinduet bliver lukket & Vinduet lukkes & OK \\\hline
-4 & \gls{SB} observerer \gls{PD}listen. & Test\gls{PD} 1 ændres til Test\gls{PD} 2, prisen til 150, stregekoden til ABC1234, og kategorien til Testkategori 2, automatisk & Produkt ændret & OK \\
+1 & \gls{SB} vælger "Testprodukt 1" & Testprodukt 1 markeres i produktslisten & Testprodukt 1 markes & OK \\\hline
+2 & \gls{SB} trykker på knappen til rediger produkt & Et nyt vindue præsenteres for \gls{SB}, som viser hhv. pris, navn, stregekode og nuværende produktkategori for det markerede "Testpodukt 1" & Vindue fremkommer & OK \\\hline
+3 & \gls{SB} ændrer navnet til Testprodukt 1a, prisen til 150, stregkode ABC1234, samt testproduktkategori til testproduktkategori 2, hvorefter han trykker på knappen til gem. & \gls{SB}"Rediger produkt"-vinduet bliver lukket & Vinduet lukkes & OK \\\hline
+4 & \gls{SB} observerer produktlisten. & Testprodukt 1 ændres til Testprodukt 2, prisen til 150, stregekoden til ABC1234, og kategorien til Testkategori 2, automatisk & Produkt ændret & OK \\
 \hline
 \end{tabularx}
-\caption{Accepttest 4: Rediger \gls{PD}}
+\caption{Accepttest 4: Rediger produkt}
 \label{tab:ATrp}
 \end{table}
 
 \begin{table}[H]
 \begin{tabularx}{\textwidth}{|p{0.5cm}|X|X|X|p{1.5cm}|}
 \hline
-\multicolumn{5}{|l|}{\textbf{Use case under test:} 4 - Rediger \gls{PD}} \\\hline
+\multicolumn{5}{|l|}{\textbf{Use case under test:} 4 - Rediger produkt} \\\hline
 \multicolumn{5}{|l|}{\textbf{Scenarie:} Ext. 1 - \gls{SB} vælger at annullere} \\\hline
-\multicolumn{5}{|p{0.97\linewidth}|}{\textbf{Prækondition:} Der skal være forbindelse til centralserver, "Test\gls{PD} 1" er oprettet samt "Testkategori 1" eksisterer.} \\\hline
+\multicolumn{5}{|p{0.97\linewidth}|}{\textbf{Prækondition:} Der skal være forbindelse til centralserver, "Testprodukt 1" er oprettet samt "Testkategori 1" eksisterer.} \\\hline
 Step & Handling & Forventet resultat & Observation & Vurdering (OK/fejl) \\\hline
-1 & \gls{SB} vælger "Test\gls{PD} 1" & Test\gls{PD} 1 markeres i \gls{PD}listen & Markeres & OK \\\hline
-2 & \gls{SB} trykker på knappen til rediger \gls{PD} & Et nyt vindue præsenteres for \gls{SB}, som viser hhv. pris, navn, stregekode og nuværende \gls{PDK} for det markerede "Testpodukt 1" & Korrekt fremvisning & OK \\\hline
-3 & \gls{SB} trykker på knappen til Annuller & Vinduet til rediger \gls{PD} lukkes & Vinduet lukkes & OK\\
+1 & \gls{SB} vælger "Testprodukt 1" & Testprodukt 1 markeres i produktlisten & Markeres & OK \\\hline
+2 & \gls{SB} trykker på knappen til rediger produkt & Et nyt vindue præsenteres for \gls{SB}, som viser hhv. pris, navn, stregekode og nuværende produktkategori for det markerede "Testpodukt 1" & Korrekt fremvisning & OK \\\hline
+3 & \gls{SB} trykker på knappen til Annuller & Vinduet til rediger produkt lukkes & Vinduet lukkes & OK\\
 \hline
 \end{tabularx}
-\caption{Accepttest 4: Rediger \gls{PD}, ext. 1}
+\caption{Accepttest 4: Rediger produkt, ext. 1}
 \label{tab:ATrp}
 \end{table}
