--- a/LaTeX/Projektdokumtation/Forside/arbejdslist.tex
+++ b/LaTeX/Projektdokumtation/Forside/arbejdslist.tex
@@ -15,21 +15,54 @@ Oversigt over hvem der har været med til at implementere de forskellige dele
 
 \multicolumn{3}{|l|}{\color{lblue} \textbf{\gls{KA}}}                                                                                                               \\ \hline
 \multicolumn{1}{|l|}{\textbf{Opgave}}           & \multicolumn{1}{l|}{\textbf{Primær}}                       & \multicolumn{1}{l|}{\textbf{Sekundær}} \\ \hline
+\multicolumn{1}{|l|}{MainWindow (XAML)}         & \multicolumn{1}{l|}{Martin}                                  &
+ \multicolumn{1}{l|}{Kasper}                  \\ \hline
+ \multicolumn{1}{|l|}{MainWindow}         & \multicolumn{1}{l|}{Kasper og Martin}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+ 
+ \multicolumn{1}{|l|}{ButtonStyle (XAML)}         & \multicolumn{1}{l|}{Kasper}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+ 
+ \multicolumn{1}{|l|}{CategoriesMenu}         & \multicolumn{1}{l|}{Martin}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+ 
+ \multicolumn{1}{|l|}{MenuCategory}         & \multicolumn{1}{l|}{Martin}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+ 
+ \multicolumn{1}{|l|}{ProductButtonControl}         & \multicolumn{1}{l|}{Martin}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+ 
+ \multicolumn{1}{|l|}{ProductButtonList}         & \multicolumn{1}{l|}{Martin}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+ 
+ \multicolumn{1}{|l|}{ShoppingList}         & \multicolumn{1}{l|}{Kasper}                                  & \multicolumn{1}{l|}{Martin}                  \\ \hline
+ 
+ \multicolumn{1}{|l|}{ProductCategoryList}         & \multicolumn{1}{l|}{Kasper}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+ 
+ \multicolumn{1}{|l|}{DBControl}         & \multicolumn{1}{l|}{Kasper}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+ 
+ \multicolumn{1}{|l|}{FilePrinter}         & \multicolumn{1}{l|}{Kasper}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+ 
+ \multicolumn{1}{|l|}{Connection}         & \multicolumn{1}{l|}{Kasper}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+ 
 & & \\& & \\ \hline                                           
 
 
 \multicolumn{3}{|l|}{\color{lblue} \textbf{\gls{AS}}}                                                                                                               \\ \hline
 \multicolumn{1}{|l|}{\textbf{Opgave}}           & \multicolumn{1}{l|}{\textbf{Primær}}                       & \multicolumn{1}{l|}{\textbf{Sekundær}} \\ \hline
+\multicolumn{1}{|l|}{Alt}         & \multicolumn{1}{l|}{Benjamin og Dennis}                                  & \multicolumn{1}{l|}{}                  \\ \hline
 & & \\& & \\ \hline 
 
 
 \multicolumn{3}{|l|}{\color{lblue} \textbf{\gls{CS}}}                                                                                                               \\ \hline
 \multicolumn{1}{|l|}{\textbf{Opgave}}           & \multicolumn{1}{l|}{\textbf{Primær}}                       & \multicolumn{1}{l|}{\textbf{Sekundær}} \\ \hline
+\multicolumn{1}{|l|}{Alt}         & \multicolumn{1}{l|}{Jakob}                                  & \multicolumn{1}{l|}{}                  \\ \hline
 & & \\& & \\ \hline 
 
 
 \multicolumn{3}{|l|}{\color{lblue} \textbf{\gls{SL}}}                                                                                                               \\ \hline
 \multicolumn{1}{|l|}{\textbf{Opgave}}           & \multicolumn{1}{l|}{\textbf{Primær}}                       & \multicolumn{1}{l|}{\textbf{Sekundær}} \\ \hline
+\multicolumn{1}{|l|}{Protocol}         & \multicolumn{1}{l|}{Andreas}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+\multicolumn{1}{|l|}{Models}         & \multicolumn{1}{l|}{Andreas}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+\multicolumn{1}{|l|}{Commands}         & \multicolumn{1}{l|}{Andreas}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+\multicolumn{1}{|l|}{Marshallers}         & \multicolumn{1}{l|}{Andreas}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+\multicolumn{1}{|l|}{SocketConnection}         & \multicolumn{1}{l|}{Jakob og Benjamin}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+\multicolumn{1}{|l|}{CommandListener}         & \multicolumn{1}{l|}{Jakob og Benjamin}                                  & \multicolumn{1}{l|}{}                  \\ \hline
+
 
 
 \end{tabular}
