Text for failed accept test

--- a/LaTeX/Projektdokumtation/Accepttest/UCT9.tex
+++ b/LaTeX/Projektdokumtation/Accepttest/UCT9.tex
@@ -20,6 +20,7 @@ Step & Handling & Forventet resultat & Observation & Vurdering (OK/fejl) \\\hlin
 \label{tab:ATspk}
 \end{table}
 
+Accepttestens punkt nr. 3 fejler. Dette skyldes at knappen for "Slet" skal blive aktiveret så snart alle produkter er flyttet. Der kræves dog, at der trykkes et eller andet sted i vinduet, før knappen bliver aktiveret. For at løse dette skal programmet på en eller anden måde få besked, når produkterne er flyttet, så knappen kan blive aktiveret.
 
 \begin{table}[H]
 \begin{tabularx}{\textwidth}{|p{0.5cm}|X|X|X|p{1.5cm}|}
