--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL.tex
@@ -1,4 +1,4 @@
-\subsection{Data Access Layer}
+\subsection{Data Access Layer} \label{DAL}
 
 \input{Systemdesign/Frontend/DAL/Intro}
 \subsubsection{Klassebeskrivelser}
