--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI.tex
@@ -9,7 +9,7 @@ Præsentationslaget i kasseapparatet er bygget med XML i WPF. Selve laget blev f
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{Systemdesign/Frontend/pics/KasseMockup}
-	\caption{Første mockup af grænsefladen til kasseapparatet.}
+	\caption{Første mockup af grænsefladen til \gls{KA}.}
 	\label{fig:KasseMockup}
 \end{figure}
 
@@ -18,7 +18,7 @@ Den ovenstående skitse, var den første skitse af kasseapparatets brugergrænse
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{Systemdesign/Frontend/pics/GUI}
-	\caption{ProductButtonControl}
+	\caption{Implementeret grænseflade til \gls{KA}}
 	\label{fig:EndeligeGUI}
 \end{figure}
 
