--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/ViewModels.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/ViewModels.tex
@@ -1,5 +1,5 @@
-\subsubsection{ViewModels}
-Herunder vil de brugte viewmodels kort blivet forklaret.
+\subsubsection{ViewModels} \label{VIEWMODELS}
+Herunder vil \gls{KA}
 
 \subsubsection{Klassebeskrivelser}
 \textbf{MainWindow}\\
@@ -13,7 +13,7 @@ I MainWindow er der oprettet en række Button.Click.Events, som har ansvar for l
 \end{figure}
 
 \textbf{CategoriesMenu}\\
-CategoriesMenu er en menu med categorier. Denne klasse står for at kende alle kategorier. Ved et tryk på "Categories" knappen, vil CategoriesMenu oprette en menu med alle kategorier der eksisterer i systemet. Til hver MenuItem vil den også tilknytte en liste af produkter. Derved kan der, ved tryk på menuitem, oprettes knapper med præcis de produkter der er ønsket. 
+CategoriesMenu er en menu med kategorier. Denne klasse står for at kende en liste med alle kategorier ved navn ProductCategoryList. Ved et tryk på "Categories" knappen, vil CategoriesMenu oprette en menu med alle kategorier der eksisterer i systemet plus en kategori der inkluderer alle produkter. Til hver MenuItem vil den også tilknytte en liste af produkter. Derved kan der, ved tryk på menuitem, oprettes knapper med præcis de produkter der er ønsket. 
 
 \begin{figure}[H]
 	\centering
@@ -54,8 +54,8 @@ ProductButtonList indeholder lister af knapper. Derved kan hver knappeliste symb
 	\label{fig:PBL}
 \end{figure}
 
-\textbf{ProductButtonContent} \\
-ProductButtonContent har indholdet af 1 knap på grænsefladen, samt produktinformationer og commands til at oprette produkter på ShoppingList ved tryk. Når man skifter side i grænsefladen vil ProductButtonContent være forbundet til hver knap.
+\textbf{ButtonContent} \\
+ButtonContent har indholdet af 1 knap på grænsefladen, samt produktinformationer og commands til at oprette produkter på ShoppingList ved tryk. Når man skifter side i grænsefladen vil ProductButtonContent være forbundet til hver knap.
 
 \begin{figure}[H]
 	\centering
