--- a/LaTeX/Projektdokumtation/Test/Integrationstest/CentralServer_integration.tex
+++ b/LaTeX/Projektdokumtation/Test/Integrationstest/CentralServer_integration.tex
@@ -1,1 +1,2 @@
 \subsection{CentralServer}
+CentralServer benytter discipliner som gør det meget omfattende at integrationsteste systemet. Her refereres til multitrådet programmering, sockets samt database. Der er derfor ikke udført integrationstests af CentralServer.
