--- a/LaTeX/Projektrapport/RapportBib.bib
+++ b/LaTeX/Projektrapport/RapportBib.bib
@@ -62,6 +62,12 @@
   		note = {Tilgået: 08/12-2015}
 }
 
+@misc{XML,
+ 		 title = {XML},
+  		howpublished = {\url{https://msdn.microsoft.com/en-us/library/aa468558.aspx}},
+  		note = {Tilgået: 14/12-2015}
+}
+
 @misc{	ObsCol,
 		title = {ObservableCollection<T> Class},
   		howpublished = {\url{https://msdn.microsoft.com/en-us/library/ms668604(v=vs.110).aspx}},
