Fixed error and added pivotaltracker

--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Commands.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Commands.tex
@@ -1,4 +1,4 @@
-\subsection{Commands}\label{COMMAND}
+\subsection{Commands}\label{COMMANDS}
 Fælles for alle systemerne i dette projekt er at de kommunikerer ved hjælp af kommandoer. 
 
 Der skelnes imellem tre typer af kommandoer:
