--- a/LaTeX/Projektrapport/RapportBib.bib
+++ b/LaTeX/Projektrapport/RapportBib.bib
@@ -62,6 +62,12 @@
   		note = {Tilgået: 08/12-2015}
 }
 
+@misc{	PIVOTAL,
+		title = {Pivotal Tracker},
+  		howpublished = {\url{https://www.pivotaltracker.com/}},
+  		note = {Tilgået: 15/12-2015}
+}
+
 @misc{XML,
  		 title = {XML},
   		howpublished = {\url{https://msdn.microsoft.com/en-us/library/aa468558.aspx}},
